<resources>
    <string name="app_name">gadget2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login_signup">Login/signup</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="trams_condition">Trams &amp; Condition</string>
    <string name="share">Share</string>
    <string name="Logout">Send</string>
    <string name="rate">Rating</string>
</resources>
