<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/login_signup"

            android:title="@string/login_signup" />


        <item
            android:id="@+id/nav_notification"

            android:title="@string/notification" />


        <item
            android:id="@+id/nav_language"

            android:title="@string/language" />


        <item
            android:id="@+id/nav_trms_condition"

            android:title="@string/trams_condition" />


        <item
        android:id="@+id/nav_rating"

        android:title="@string/rate" />


        <item
        android:id="@+id/nav_share"

        android:title="@string/share" />


        <item
        android:id="@+id/nav_lgout"

        android:title="@string/Logout" />
    </group>


</menu>
