<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gadget2.ui.home.HomeFragment"
        android:label="@string/login_signup"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.gadget2.ui.gallery.GalleryFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.gadget2.ui.slideshow.SlideshowFragment"
        android:label="@string/language"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.gadget2.ui.tools.ToolsFragment"
        android:label="@string/trams_condition"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_rate"
        android:name="com.example.gadget2.ui.share.ShareFragment"
        android:label="@string/rate"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.gadget2.ui.send.SendFragment"
        android:label="@string/share"
        tools:layout="@layout/fragment_send" />
    <fragment
    android:id="@+id/nav_send"
    android:name="com.example.gadget2.ui.send.SendFragment"
    android:label="@string/Logout"
    tools:layout="@layout/fragment_send" />

</navigation>